docs: update README with GKE cloud results and FinOps analysis